in them được dòng 'so tien quy doi la'

--- a/tesst.html
+++ b/tesst.html
@@ -29,14 +29,15 @@
                     </select>
                 </td>
                 <td>
-                    <button type="button" onclick="f()">Click me</button>
+                    <button type="button" onclick="rr()">Click me</button>
 
                 </td>
             </tr>
         </table>
-        <pre id ="dis"></pre>
+        <br> so tien quy doi la:
+        <h3 id="dis"></h3>
         <script>
-           function f() {
+           function rr() {
                let a = parseFloat(document.getElementById('1').value);
                let b = document.getElementById('2').value;
                let c = document.getElementById('3').value;
