--- a/Th-switch-case/bai3.html
+++ b/Th-switch-case/bai3.html
@@ -8,12 +8,17 @@
     <script>
         let value =parseFloat(prompt('type a number'));
 
-        if (value >0){
-                alert(1);
-        }else if (value<0)
-            alert(-1);
-            else
-                alert(0);
+       switch ((value >0) ? 1 : (value<0)?-1:0 ){
+           case 0:
+               alert(0);
+               break;
+           case -1:
+               alert(-1);
+               break;
+           case 1:
+               alert(1);
+               break;
+       }
     </script>
 </body>
 </html>
