--- a/5 Cấu trúc lặp/tHực hành vòng lặp for.html
+++ b/5 Cấu trúc lặp/tHực hành vòng lặp for.html
@@ -5,16 +5,13 @@
     <title>Demo</title>
 </head>
 <body>
-    <h2>JavaScript</h2>
-    <p id="demo"></p>
     <script>
-        let text = "";
-        let i;
-        for (i=0;i<5;i++){
-            text +="the number is "+ i +"<br>"
+        let num=prompt("Enter your number ");
+        let total= 0;
+        for (i=1;i<=num;i++){
+            total=total+i;
         }
-        document.getElementById("demo").innerHTML=text;
-
+        alert(total)
     </script>
 </body>
 </html>
